k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: evidence-vydaju
  labels:
    name: evidence-vydaju
