k8s/emulator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emulator-svc
  namespace: evidence-vydaju
spec:
  type: ClusterIP
  selector:
    app: firebase-emulator
  ports:
  - name: ui
    port: 4000
    targetPort: 4000
    protocol: TCP
  - name: firestore
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: auth
    port: 9099
    targetPort: 9099
    protocol: TCP
  - name: functions
    port: 5001
    targetPort: 5001
    protocol: TCP
